force-app/main/default/objects/SecurityDepositPaymentDetail__c/SecurityDepositPaymentDetail__c.object-meta.xml
<CustomObject>
    <label>敷金入金明細</label>
    <nameField>
        <displayFormat>SD-{000000000}</displayFormat>
        <label>敷金入金明細名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>