force-app/main/default/objects/SecurityDepositPaymentDetail__c/fields/CancelCancelCalculate__c.field-meta.xml
<CustomField>
    <fullName>CancelCancelCalculate__c</fullName>
    <label>解約精算</label>
    <referenceTo>CancelCalculate__c</referenceTo>
    <relationshipLabel>敷金入金明細</relationshipLabel>
    <relationshipName>CancelCalculatePaymentDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>