force-app/main/default/objects/SecurityDepositPaymentDetail__c/fields/Depositor__c.field-meta.xml
<CustomField>
    <fullName>Depositor__c</fullName>
    <label>入金者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>貸主</fullName>
            </value>
            <value>
                <fullName>貸主代理</fullName>
            </value>
            <value>
                <fullName>管理会社</fullName>
            </value>
            <value>
                <fullName>入居者</fullName>
            </value>
            <value>
                <fullName>雑処理対応</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>