force-app/main/default/objects/SecurityDepositPaymentDetail__c/fields/IsFinanceCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsFinanceCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>経理完了フラグ</label>
    <type>Checkbox</type>
</CustomField>