force-app/main/default/objects/SecurityDepositPaymentDetail__c/fields/MiscellaneousIncome__c.field-meta.xml
<CustomField>
    <fullName>MiscellaneousIncome__c</fullName>
    <defaultValue>false</defaultValue>
    <label>雑収入</label>
    <type>Checkbox</type>
</CustomField>