force-app/main/default/objects/SecurityDepositPaymentDetail__c/fields/PaymentExpectederBank__c.field-meta.xml
<CustomField>
    <fullName>PaymentExpectederBank__c</fullName>
    <label>入金予定者銀行</label>
    <length>255</length>
    <type>Text</type>
</CustomField>