force-app/main/default/objects/SecurityDepositPaymentDetail__c/fields/RefundDate__c.field-meta.xml
<CustomField>
    <fullName>RefundDate__c</fullName>
    <label>返金日</label>
    <type>Date</type>
</CustomField>