force-app/main/default/objects/SecurityDepositPaymentDetail__c/fields/SecondaryCheckStaff__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCheckStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>二次チェック者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SecurityDepositPaymentDetailUserRelation</relationshipName>
    <type>Lookup</type>
</CustomField>